tryingdevToGit/force-app/main/default/objects/Low_Ink__e/Low_Ink__e.object-meta.xml
<CustomObject>
    <label>Low Ink</label>
    <pluralLabel>Low Inks</pluralLabel>
</CustomObject>