tryingdevToGit/force-app/main/default/objects/Low_Ink__e/fields/Ink_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ink_Percentage__c</fullName>
    <label>Ink Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>