tryingdevToGit/force-app/main/default/objects/Low_Ink__e/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>